--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>yc889网址大全</title>
-		<link rel="shortcut icon" href="img/favicon.ico">
+		<meta name="description" content="常用网址导航、快捷服务合集，汇集实用网站与快捷服务入口，一站式访问新闻、工具、购物、银行等常用在线服务。">
+		<title>在线服务入口</title>
+		<link rel="shortcut icon" href="img/logo.png">
 		<link rel="stylesheet" href="js/index.css">
 		<script type="text/javascript" src="./js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="./js/index.js"></script>
@@ -17,7 +18,7 @@
 				<header>
 					<div class="logo-container">
 						<div class="logo-icon"></div>
-						<span class="logo-text">网址大全</span>
+						<span class="logo-text">在线服务入口</span>
 					</div>
 				</header>
 
@@ -142,7 +143,7 @@
 
 			<div class="logo">
 				<i class="logoxz logo1"></i>
-				<span class="logo-text">网址大全</span>
+				<span class="logo-text">在线服务入口</span>
 			</div>
 
 			<section class="neirf">
