--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="description" content="常用网址导航、快捷服务合集，汇集实用网站与快捷服务入口，一站式访问新闻、工具、购物、银行等常用在线服务。">
-		<title>在线服务入口</title>
+		<title> a5228网址大全</title>
 		<link rel="shortcut icon" href="img/logo.png">
 		<link rel="stylesheet" href="js/index.css">
 		<script type="text/javascript" src="./js/jquery-1.7.2.min.js"></script>
